아이콘 버그 해결

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,4 +18,11 @@ buildscript {
     }
 }
 
+
+tasks.whenTaskAdded { task ->
+    if (task.name == 'generateDebugLintReportModel') {
+        task.dependsOn 'copyReactNativeVectorIconFonts'
+    }
+}
+
 apply plugin: "com.facebook.react.rootproject"
