--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "react": "18.2.0",
     "react-native": "0.74.4",
     "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.18.1",
     "react-native-modal": "^13.0.1",
+    "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.33.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-uuid": "^2.0.2",
+    "react-native-vector-icons": "^10.1.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
