--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-picker/picker": "^2.7.7",
+    "@react-native-picker/picker": "2.7.7",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
@@ -26,6 +26,7 @@
     "react-native-screens": "^3.33.0",
     "react-native-uuid": "^2.0.2",
     "react-native-vector-icons": "^10.1.0",
+    "react-native-wheel-picker-android": "2.0.6",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
