--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.33.0",
     "react-native-uuid": "^2.0.2",
-    "react-native-vector-icons": "^10.1.0",
+    "react-native-vector-icons": "10.1.0",
     "react-native-wheel-picker-android": "2.0.6",
     "uuid": "^10.0.0"
   },
