사운드 밑작업

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
         implementation jscFlavor
     }
 
+    implementation project(':react-native-sound')
     implementation project(':react-native-vector-icons')
 }
 
