--- a/package.json
+++ b/package.json
@@ -18,19 +18,16 @@
     "@rneui/themed": "^0.0.0-edge.2",
     "react": "18.2.0",
     "react-native": "0.74.4",
-    "react-native-circular-progress": "1.4.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-modal": "^13.0.1",
-    "react-native-progress": "5.0.1",
     "react-native-reanimated": "^3.0.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.33.0",
-    "react-native-svg": "15.5.0",
+    "react-native-sound": "0.11.2",
     "react-native-uuid": "^2.0.2",
     "react-native-vector-icons": "10.1.0",
-    "react-native-wheel-picker-android": "2.0.6",
-    "uuid": "^10.0.0"
+    "react-native-wheel-picker-android": "2.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
