--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.74.4",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.18.1",
+    "react-native-linear-gradient": "2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.0.0",
     "react-native-safe-area-context": "^4.10.8",
